--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "classnames": "^2.2.6",
+    "emotion": "^10.0.27",
     "gsap": "^3.2.4",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
