--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/classnames": "^2.2.10",
     "@types/gsap": "^1.20.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -16,6 +17,7 @@
     "classnames": "^2.2.6",
     "emotion": "^10.0.27",
     "gsap": "^3.2.4",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.0",
