--- a/v3/package.json
+++ b/v3/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "sass-loader": "^12.4.0",
+    "swiper": "^7.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
